INDIGO-330 Fix inputs & overflow

--- a/war/src/main/webapp/engines/jahia-anthracite/_components.scss
+++ b/war/src/main/webapp/engines/jahia-anthracite/_components.scss
@@ -4060,6 +4060,24 @@ body[data-indigo-gwt-side-panel="open"] {
 		float: right;
 	}
 
+	form.x-form-label-left {
+		overflow: auto !important;
+	}
+
+	input {
+		background: _property($MENU-MUTED-CLOSED--BG---HOVER, $type);
+		margin-bottom: 2px;
+
+		&:hover {
+			background: _theme-color(primary, b);
+		}
+
+		&:focus {
+			background: _theme-color(secondary, g) !important;
+		}
+
+	}
+
 }
 
 .x-window.image-rotate {
